app5PasswordStorageAndVerification/microservice2/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app5-microservice2
spec:
  selector:
    app: app5-microservice2
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8041
  type: ClusterIP
