app5PasswordStorageAndVerification/microservice2/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app5-microservice2
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /password/verify
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /app5-microservice2
        pathType: Prefix
        backend:
          service:
            name: app5-microservice2
            port:
              number: 80
